// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Nav -  Throws an error when proptype for horsize is wrong 1`] = `
<nav
  className="nav nav-xxxl-vertical-wide"
>
  <ul>
    <li
      key="nav-item-Home-0"
    >
      

      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          home
        </i>
        

        <span>
          Home
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Transactions-1"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          shopping_cart
        </i>
        

        <span>
          Transactions
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Notifications-2"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          notification_important
        </i>
        

        <span>
          Notifications
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Language-3"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          language
        </i>
        

        <span>
          Language
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Account-4"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          account_balance
        </i>
        

        <span>
          Account
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Authentication-5"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          fingerprint
        </i>
        

        <span>
          Authentication
        </span>
        

      </a>
      

    </li>
  </ul>
</nav>
`;

exports[`Component: Nav -  Throws an error when proptype for vertsize is wrong 1`] = `
<nav
  className="nav nav-xxxl-vertical"
>
  <ul>
    <li
      key="nav-item-Home-0"
    >
      

      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          home
        </i>
        

        <span>
          Home
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Transactions-1"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          shopping_cart
        </i>
        

        <span>
          Transactions
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Notifications-2"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          notification_important
        </i>
        

        <span>
          Notifications
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Language-3"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          language
        </i>
        

        <span>
          Language
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Account-4"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          account_balance
        </i>
        

        <span>
          Account
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Authentication-5"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          fingerprint
        </i>
        

        <span>
          Authentication
        </span>
        

      </a>
      

    </li>
  </ul>
</nav>
`;

exports[`Component: Nav -  renders 1`] = `
<nav
  className="nav"
>
  <ul>
    <li
      key="nav-item-Home-0"
    >
      

      <a
        className="active"
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          home
        </i>
        

        <span>
          Home
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Transactions-1"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          shopping_cart
        </i>
        

        <span>
          Transactions
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Notifications-2"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          notification_important
        </i>
        

        <span>
          Notifications
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Language-3"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          language
        </i>
        

        <span>
          Language
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Account-4"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          account_balance
        </i>
        

        <span>
          Account
        </span>
        

      </a>
      

    </li>
    <li
      key="nav-item-Authentication-5"
    >
      

      <a
        className={null}
        href="#"
        onClick={[Function]}
      >
        

        <i
          className="material-icons"
        >
          fingerprint
        </i>
        

        <span>
          Authentication
        </span>
        

      </a>
      

    </li>
  </ul>
</nav>
`;
